--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,42 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Node modules
+node_modules/
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Build directory
+dist/
+build/
 
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Cache and output folders
+.cache/
+.tmp/
+
+# Dependency directories
+.pnp/
+.pnp.js
+
+# IDE or editor-specific files
+.vscode/
+.idea/
+
+# OS-generated files
+.DS_Store
+Thumbs.db
+
+# React and web app specific files
+*.lock
+public/asset-manifest.json
+public/service-worker.js
+public/manifest.json
+public/*.map
+
+# TypeScript cache and output (if using TypeScript)
+*.tsbuildinfo
